client/src/app/child-components/account-type/account-type.component.scss
@import '../../../styles/constants.scss';

:host {
  .account-type-selections {
    position: relative;
    display: inline-block;
    vertical-align: top;

    mat-card {
      display: inline-block;
      min-width: 150px;
      height: 150px;
      margin: 0px 16px 16px;
      text-align: center;
      vertical-align: top;

      &:last-child {
        margin: 0px 16px;
      }

      mat-toolbar {
        font-weight: bold;
      }

      mat-icon {
        $icon-size: 60px;
        font-size: $icon-size;
        width: $icon-size;
        height: $icon-size;
        margin-top: 10px;
      }
    }

    &.edit {
      mat-card {
        cursor: pointer;
    
        &:hover {
          box-shadow: 0px 3px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
        }

        .not-selected-mask {
          display: none;
        }
      }
    }

    &.display {
      .not-selected-mask {
        display: block;
        position: absolute;
        left: 0px;
        top: 0px;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.25);
      }

      .selected {
        .not-selected-mask {
          display: none;
        }
      }

      mat-card:not(.selected) {
        box-shadow: none;
        border: 1px solid #e4e4e4;
      }

      @media only screen and (max-width: 410px) {
        mat-card:not(.selected) {
          display: none;
        }
      }
    }
  }
}

